      (Robert Collins, Aaron Bentley, #212908)

    * Fix error about "attempt to add line-delta in non-delta knit".
      (Andrew Bennetts, #217701)

    * Pushing a branch in "dirstate" format (Branch5) over bzr+ssh would break
      if the remote server was < version 1.2. This was due to a bug in the
      RemoteRepository.get_parent_map() fallback code.
      (John Arbash Meinel, #214894)

    * Set SO_REUSEADDR on server sockets of ``bzr serve`` to avoid problems
      rebinding the socket when starting the server a second time.
      (John Arbash Meinel, Martin Pool, #164288)

    * Severe performance degradation in fetching from knit repositories to
      knits and packs due to parsing the entire revisions.kndx on every graph
      walk iteration fixed by using the Repository.get_graph API.  There was
      another regression in knit => knit fetching which re-read the index for
      every revision each side had in common.
      (Robert Collins, John Arbash Meinel)

    * When logging the changes to a particular file, there was a bug if there
      were ghosts in the revision ancestry. (John Arbash Meinel, #209948)

  DOCUMENTATION:

    * Document outlining strategies for TortoiseBzr. (Mark Hammond)

  TESTING:

    * Add ``thread_name_suffix`` parameter to SmartTCPServer_for_testing, to
      make it easy to identify which test spawned a thread with an unhandled
      exception. (Andrew Bennetts)

  INTERNALS:

    * ``Hooks.install_hook`` is now deprecated in favour of
      ``Hooks.install_named_hook`` which adds a required ``name`` parameter, to
      avoid having to call ``Hooks.name_hook``. (Daniel Watkins)

    * Implement xml8 serializer.  (Aaron Bentley)

    * New form ``@deprecated_method(deprecated_in(1, 5, 0))`` for making 
      deprecation wrappers.  (Martin Pool)

  API BREAKS:

    * Repository.get_data_stream, Repository.get_data_stream_for_search(),
      Repository.get_deltas_for_revsions(), Repository.revision_trees(),